# CoronaryArteryPathologyRatingSystem

./: README.md  程序说明文档.doc
Syntax/: DSA、MRA、CTA之比较.doc  SYNTAX积分及应用.docx  syntax评分.doc  与周医生沟通.doc  体绘系列.rar  冠脉病变SYNTAX_评分_值得收藏(附图).doc  新建 Microsoft Word 文档.doc
代码/Slicer插件/源代码/slicervmtk/: COPYING  INSTALL  README
代码/Slicer插件/源代码/slicervmtk/VMTKStenosisDetector/StenosisDetector/: CMakeLists.txt  qSlicerStenosisDetectorModule.cxx
代码/Slicer插件/源代码/slicervmtk/VMTKStenosisDetector/StenosisDetector/.svn/: entries
代码/Slicer插件/源代码/slicervmtk/VMTKStenosisDetector/StenosisDetector/.svn/text-base/: qSlicerStenosisDetectorModule.h.svn-base  qSlicerStenosisDetectorModuleWidget.cxx.svn-base  qSlicerStenosisDetectorModuleWidget.h.svn-base
代码/Slicer插件/源代码/slicervmtk/VMTKStenosisDetector/StenosisDetector/GUI/.svn/: entries
代码/Slicer插件/源代码/slicervmtk/VMTKStenosisDetector/StenosisDetector/Logic/.svn/: entries
代码/Slicer插件/源代码/slicervmtk/VMTKStenosisDetector/StenosisDetector/Logic/.svn/text-base/: vtkSlicerStenosisDetectorModuleLogic.cxx.svn-base  vtkSlicerStenosisDetectorModuleLogic.h.svn-base
代码/Slicer插件/源代码/slicervmtk/VMTKStenosisDetector/StenosisDetector/Resources/.svn/: entries
代码/Slicer插件/源代码/slicervmtk/VMTKStenosisDetector/StenosisDetector/Resources/.svn/text-base/: qSlicerStenosisDetectorModule.qrc.svn-base
代码/Slicer插件/源代码/slicervmtk/VMTKStenosisDetector/StenosisDetector/Resources/Images/.svn/: entries
代码/Slicer插件/源代码/slicervmtk/VMTKStenosisDetector/StenosisDetector/Resources/UI/: qSlicerStenosisDetectorAppreciationStep.ui  qSlicerStenosisDetectorModule.ui  qSlicerStenosisDetectorSelectVolumeStep.ui  qSlicerStenosisDetectorWelcomeStep.ui  qtest.ui  test.ui
代码/Slicer插件/源代码/slicervmtk/VMTKStenosisDetector/StenosisDetector/Resources/UI/.svn/: entries
代码/Slicer插件/源代码/slicervmtk/VMTKStenosisDetector/StenosisDetector/Resources/UI/.svn/text-base/: ctkWorkflowGroupBoxSteDet.ui.svn-base  qSlicerStenosisDetectorLumenSegmentationStep.ui.svn-base  qSlicerStenosisDetectorVesselnessStep.ui.svn-base
代码/Slicer插件/源代码/slicervmtk/VMTKStenosisDetector/StenosisDetector/Workflow/: qSlicerStenosisDetectorWorkflowLumenSegmentationStep.h  qSlicerStenosisDetectorWorkflowLumenSegmentationStep_p.h  qSlicerStenosisDetectorWorkflowSelectVolumeStep.cxx  qSlicerStenosisDetectorWorkflowSelectVolumeStep.h  qSlicerStenosisDetectorWorkflowVesselnessStep.cxx  qSlicerStenosisDetectorWorkflowWelcomeStep.cxx  qSlicerStenosisDetectorWorkflowWelcomeStep.h  qSlicerStenosisDetectorWorkflowWelcomeStep_p.h
代码/Slicer插件/源代码/slicervmtk/VMTKStenosisDetector/StenosisDetector/Workflow/.svn/: entries
代码/Slicer插件/源代码/slicervmtk/VMTKStenosisDetector/StenosisDetector/Workflow/.svn/text-base/: qSlicerStenosisDetectorWorkflowAppreciationStep.cxx.svn-base  qSlicerStenosisDetectorWorkflowAppreciationStep.h.svn-base  qSlicerStenosisDetectorWorkflowAppreciationStep_p.h.svn-base  qSlicerStenosisDetectorWorkflowLumenSegmentationStep.cxx.svn-base  qSlicerStenosisDetectorWorkflowSelectVolumeStep_p.h.svn-base  qSlicerStenosisDetectorWorkflowVesselnessStep.h.svn-base  qSlicerStenosisDetectorWorkflowVesselnessStep_p.h.svn-base  qSlicerStenosisDetectorWorkflowWidgetStep.cxx.svn-base  qSlicerStenosisDetectorWorkflowWidgetStep.h.svn-base
代码/Slicer插件/源代码/slicervmtk/VMTKStenosisDetector/StenosisDetector/vtkVmtk/.svn/: entries
代码/Slicer插件/源代码/slicervmtk/VMTKStenosisDetector/StenosisDetector/vtkVmtk/Common/.svn/: entries
代码/Slicer插件/源代码/slicervmtk/VMTKStenosisDetector/StenosisDetector/vtkVmtk/Common/.svn/text-base/: vtkvmtkWin32Header.h.svn-base
代码/Slicer插件/源代码/slicervmtk/VMTKStenosisDetector/StenosisDetector/vtkVmtk/ComputationalGeometry/.svn/: entries
代码/Slicer插件/源代码/slicervmtk/VMTKStenosisDetector/StenosisDetector/vtkVmtk/Contrib/.svn/: entries
代码/Slicer插件/源代码/slicervmtk/VMTKStenosisDetector/StenosisDetector/vtkVmtk/DifferentialGeometry/: vtkvmtkPolyDataHarmonicMappingFilter.h
代码/Slicer插件/源代码/slicervmtk/VMTKStenosisDetector/StenosisDetector/vtkVmtk/DifferentialGeometry/.svn/: entries
代码/Slicer插件/源代码/slicervmtk/VMTKStenosisDetector/StenosisDetector/vtkVmtk/IO/: vtkvmtkDolfinWriter.h
代码/Slicer插件/源代码/slicervmtk/VMTKStenosisDetector/StenosisDetector/vtkVmtk/IO/.svn/: entries
代码/Slicer插件/源代码/slicervmtk/VMTKStenosisDetector/StenosisDetector/vtkVmtk/Misc/: vtkvmtkMeshVorticity.h
代码/Slicer插件/源代码/slicervmtk/VMTKStenosisDetector/StenosisDetector/vtkVmtk/Misc/.svn/: entries
代码/Slicer插件/源代码/slicervmtk/VMTKStenosisDetector/StenosisDetector/vtkVmtk/Misc/.svn/text-base/: vtkvmtkMeshVorticity.cxx.svn-base  vtkvmtkSimpleCapPolyData.h.svn-base
代码/Slicer插件/源代码/slicervmtk/VMTKStenosisDetector/StenosisDetector/vtkVmtk/Segmentation/: vtkvmtkVesselnessMeasureImageFilter.h
代码/Slicer插件/源代码/slicervmtk/VMTKStenosisDetector/StenosisDetector/vtkVmtk/Segmentation/.svn/: entries
代码/Slicer插件/源代码/slicervmtk/VMTKStenosisDetector/StenosisDetector/vtkVmtk/Utilities/.svn/: entries
代码/Slicer插件/源代码/slicervmtk/VMTKStenosisDetector/StenosisDetector/vtkVmtk/Utilities/Doxygen/.svn/: entries
代码/Slicer插件/源代码/slicervmtk/VMTKStenosisDetector/StenosisDetector/vtkVmtk/Utilities/OpenNL/.svn/: entries
代码/Slicer插件/源代码/slicervmtk/VMTKStenosisDetector/StenosisDetector/vtkVmtk/Utilities/tetgen1.4.3/.svn/: entries
代码/Slicer插件/源代码/slicervmtk/VMTKStenosisDetector/StenosisDetector/vtkVmtk/Utilities/vtkvmtkITK/.svn/: entries
代码/Slicer插件/源代码/slicervmtk/VMTKStenosisDetector/StenosisDetector/vtkVmtk/Utilities/vtkvmtkITK/.svn/text-base/: vtkvmtkITK.h.svn-base
代码/Slicer插件/源代码/slicervmtk/VMTKStenosisDetector/StenosisDetector/vtkVmtk/Wrapping/.svn/: entries
代码/Slicer插件/源代码/slicervmtk/VMTKStenosisDetector/StenosisDetector/vtkVmtk/Wrapping/Tcl/.svn/: entries
代码/病变计算/CTA/: CTA.sln  UpgradeLog.htm
代码/病变计算/CTA/Backup/: CTA.sln
代码/病变计算/CTA/CTA/: CTA.vcproj  main.cpp  (+10 more)
实验数据/: 分组信息.vtp
(+197 files in other folders)
